<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bike Polo Shuffle</string>
    <string name="app_name_2line">Bike Polo\nShuffle</string>
    <string name="addPlayer">Add</string>
    <string name="play">Play</string>
    <string name="NULL" />
    <string name="zero">0</string>
    <string name="enterName">Enter Player Name</string>
    <string name="removePlayer">Remove  </string>
    <string name="playerExists">Player already exists</string>
    <string name="resetGames">Reset Games</string>
    <string name="removeAllPlayers">Remove All Players</string>
    <string name="removeAllPlayersShrt">Remove Players</string>
    <string name="resetGamesResult">Game history reset</string>
    <string name="removeAllPlayersResult">All players removed</string>
    <string name="playQ">Play?</string>
    <string name="name">Name</string>
    <string name="games">Games</string>
    <string name="rankAdjusted">Rank adjusted</string>
    <string name="logo_bpck">Logo BPCK</string>
    <string name="startGame">Start Game</string>
    <string name="menuShowLastGame">Show Latest Game</string>
    <string name="timerLeft">Time Left</string>
    <string name="timerZero">00:00</string>
    <string name="titleLatestGame">Latest Game</string>
    <string name="titleNextGame">Next Game</string>
    <string name="finishGame">Finish Game</string>
    <string name="finishGameFirst">Finish current game first</string>
    <string name="addPlayersFirst">Add players first</string>
    <string name="notifGameOngoing">Bike Polo Game Ongoing</string>
    <string name="notifGameEnd">Bike Polo Game Ended!</string>
    <string name="prefNotifTitle">Game Notifications</string>
    <string name="prefNotif">Show notifications?</string>
    <string name="settings">Settings</string>
    <string name="prefTimerUseTitle">Timer</string>
    <string name="prefTimerUse">Use timer?</string>
    <string name="prefTimerTitle">Timer value</string>
    <string name="prefTimerInputTitle">Game time</string>
    <string name="prefTimerDefault">10</string>
    <string name="prefTeamTitle">Team play</string>
    <string name="prefTeam">Teams play together</string>
    
    <string-array name="arrayGameTime">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
    </string-array>

    <string name="title_activity_game_history">Game History</string>
    <string name="menuGameHistory">Game History</string>
    <string name="noGameHistory">No game history yet</string>
    <string name="menuGamePreview">Preview Next Game</string>
    <string name="nextGame">Next Game</string>
    <string name="imgInPlay">Player in game indicator</string>
    <string name="imgTeam">Team indicator</string>
    <string name="imgGoals">Goals indicator</string>
    <string name="imgRemove">Remove Player Button</string>
    <string name="at">\@</string>
    <string name="newTeam">New Team</string>
    <string name="noTeam">No Team</string>
    <string name="nameErr">Incorrect Name</string>
    <string name="tooManyPlayers">Too Many Players In Team</string>
</resources>