<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ViewFlipperPlayerList"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- View 1 - Player data -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/playerNameOnList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:duplicateParentState="true"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            android:text="@string/NULL" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:orientation="horizontal" >
            
            <ImageView
                android:id="@+id/imgTeam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/imgTeam"
                android:src="@drawable/ic_team" />
			
			<TextView
                android:id="@+id/teamOnList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NULL" />

            <TextView
                android:id="@+id/goalsOnList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NULL" />

            <!-- Padding -->
			<View              
                android:layout_height="wrap_content"
                android:layout_width="0.0dp"
                android:layout_weight="1.0"
                />
            
            <ImageView 
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/ic_bar_new_game"  
                android:contentDescription="@string/imgGoals"              
                />
            <TextView
                android:id="@+id/gamesPlayedOnList"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingRight="5dip"
                android:text="@string/zero" />
        </LinearLayout>
    </LinearLayout>

    <!-- View 2 - Player modification -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="left" >

        <CheckBox
            android:id="@+id/checkboxInPlayv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="checkboxInPlayClick"
            android:text="@string/NULL" />

        <TextView
            android:id="@+id/playerNameOnListv2"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:duplicateParentState="true"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            android:text="@string/NULL" />
    </LinearLayout>

</ViewFlipper>